--- a/contacten.html
+++ b/contacten.html
@@ -45,7 +45,7 @@
 						<div class="main-navigation">
 							<button type="button" class="menu-toggle"><i class="fa fa-bars"></i></button>
 							<ul class="menu">
-								<li class="menu-item"><a href="#">Thuis</a></li>
+								<li class="menu-item"><a href="index.html">Thuis</a></li>
 								<li class="menu-item"><a href="overOns.html">Over ons</a></li>
 								<li class="menu-item"><a href="blog.html">Blog</a></li>
 								<li class="menu-item"><a href="contacten.html">Contacten</a></li>
